# DataModelBuildeV2

./: .gitignore  App.tsx  BUG_REPORT.md  README.md  bugs.md  build-tauri.sh  build-web.sh  build_tauri.sh  build_web.sh  docker-compose.yml  failed_cases.md  idea.md  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  run_server.sh  run_web.sh  skills-lock.json  tasks.md  temp_test_data.csv  tsconfig.json  types.ts  vite.config.ts
.claude/: settings.local.json
backend/: .coverage  Dockerfile  api_contract.py  collab_storage.py  coverage-backend.json  default_server.json  engine.py  generate_openapi_schema.py  import_cleaner.py  job_runner.py  lineage.py  main.py  models.py  openapi.generated.json  realtime.py  requirements.txt  runtime_config.py  security.py  session_config.json  session_storage.json  sql_generator.py  sql_utils.py  storage.py  test_api_basics.py  test_api_bulk_matrix.py  test_api_collab_modules_51_52.py  test_api_collab_phase1.py  test_api_collab_realtime.py  test_api_config.py  test_api_contract_module_58.py  test_api_dataset_assets_local.py  test_api_dataset_errors.py  test_api_execution.py  test_api_generate_sql_real_requests.py  test_api_identifiers.py  test_api_import_endpoints.py  test_api_jobs_module_56.py  test_api_main_branches_extra.py  test_api_parquet_replace.py  test_api_routes.py  (+17 more)
components/: Button.tsx  CollabPresenceFloat.tsx  CommandEditor.tsx  ComplexDataPreview.tsx  ConflictNoticeModal.tsx  DataBrowser.tsx  DataImport.tsx  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+149 files in other folders)
